Archive/a5fa00cf2a4a5b050b64a04fcb1ef5f3-7063104e283ed82d51a6fde7370c6e59/output
main.cpp: In instantiation of 'void Print(T&&, Tn&& ...) [with long unsigned int n = 1ul; T = int; Tn = {}]':
main.cpp:10:54:   recursively required from 'void Print(T&&, Tn&& ...) [with long unsigned int n = 2ul; T = int; Tn = {int}]'
main.cpp:10:54:   required from 'void Print(T&&, Tn&& ...) [with long unsigned int n = 3ul; T = int; Tn = {int, int}]'
main.cpp:20:62:   required from 'void Print(Tn&& ...) [with Tn = {int, int, int}]'
main.cpp:36:47:   required from 'void Cleave(const disambiguator_t&, Tx&& ...) [with Tx = {int, int, int}]'
main.cpp:41:28:   required from here
main.cpp:10:54: error: no matching function for call to 'Print()'
     Print<n - 1, Tn...>( std::forward<Tn>( argn )... );
                                                      ^
main.cpp:10:54: note: candidate is:
main.cpp:8:6: note: template<long unsigned int n, class T, class ... Tn> void Print(T&&, Tn&& ...)
 void Print ( T&& arg, Tn&&... argn ) {
      ^
main.cpp:8:6: note:   template argument deduction/substitution failed:
main.cpp:10:54: note:   candidate expects 2 arguments, 0 provided
     Print<n - 1, Tn...>( std::forward<Tn>( argn )... );
                                                      ^
